export interface Question {
  id: string;
  text: string;
  subjectId: string;
  answers: any;
}
